SubmitButton text color fixed on mobile

--- a/src/components/ButtonSubmit/ButtonSubmit.scss
+++ b/src/components/ButtonSubmit/ButtonSubmit.scss
@@ -8,6 +8,7 @@
     border-radius: 12px;
     font-size: 1.125rem;
     font-weight: 600;
+    color: white;
 }
 .button-submit:hover{
     cursor: pointer;
